[package]
name = "mongodb-connection-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
env_logger = "0.10.0"

[dependencies.mongodb]
version = "3.3.0"
features = ["tracing-unstable"]
